--- a/templates/base.html
+++ b/templates/base.html
@@ -19,64 +19,7 @@
   </header>
 
   <div class="container">
-    <div>
-      <center>
-        <button class="btn reverse" id="btn1">button 1</button>
-        <button class="btn" id="btn2">button 2</button>
-      </center>
-    </div>
-
-    <div id="form_1">
-      <form>
-        <center>
-            <h1 class="title"><u> Registration form 1</u></h1>
-            <input type="text"  autocomplete="off" class="formo" placeholder="RBK Number"> 
-            <input type="text"  autocomplete="off" class="formo" placeholder="Phone Number">  
-            <input type="text"  autocomplete="off" class="formo" placeholder="set new password">  
-            <input type="text"  autocomplete="off" class="formo" placeholder="Conform password" required>  
-            
-            <br><br><br><br>
-            <button type="button" class="bto"><b>SUBMIT</b></button><br><br>
-        </center>
-      </form>
-    </div>
-
-    <div id="form_2" style="display: none;">
-      <form>
-        <center>
-            <h1 class="title"><u> Registration form 2</u></h1>
-            <input type="text"  autocomplete="off" class="formo" placeholder="RBK Number"> 
-            <input type="text"  autocomplete="off" class="formo" placeholder="Phone Number"> 
-            
-            <br><br><br><br>
-            <button type="button" class="bto"><b>SUBMIT</b></button><br><br>
-        </center>
-      </form>
-    </div>
-
+    {% block container_content %} {% endblock %}
   </div>
-  
-  <script>
-
-    var btn1 = document.getElementById("btn1")
-    btn1.addEventListener('click', (event) =>{
-      event.preventDefault()
-      btn1.classList.add('reverse')
-      btn2.classList.remove('reverse')
-      document.getElementById('form_1').style.display = "block"
-      document.getElementById('form_2').style.display = "none"
-    })
-
-
-    var btn2 = document.getElementById("btn2")
-    btn2.addEventListener('click', (event) =>{
-      event.preventDefault()
-      btn2.classList.add('reverse')
-      btn1.classList.remove('reverse')
-      document.getElementById('form_2').style.display = "block"
-      document.getElementById('form_1').style.display = "none"
-    })
-
-  </script>
 </body>
 </html>
