--- a/static/css/base_styles.css
+++ b/static/css/base_styles.css
@@ -138,7 +138,7 @@ fieldset{
     font-size: large;
     font-weight: bold;
     margin: 10px;
-    height: fit-content;;
+    height: fit-content;
 }
 .flex_box_row_wrap{
     display: flex;
